# backend

./: .coveragerc  .env.example  .gcloudignore  .gitignore  Dockerfile  Pipfile  README.md  app.yaml  cloudbuild.yaml  emailteee.py  pyproject.toml  run.py  scratchpad.py
.github/workflows/: test.yml
app/: .coveragerc  account.py  admin.py  aggregation.py  auth.py  authentication.py  cryptography.py  database.py  documentation.py  email.py  errors.py  export.py  exportation.py  field.py  log.py  logging.py  mailing.py  main.py  models.py  results.py  settings.py  submission.py  survey.py  utils.py  validation.py
app/cryptography/: access.py  password.py  verification.py
app/emails/: account_verification.html  account_verification.txt  magic_login.html  magic_login.txt  submission_verification.html  submission_verification.txt
app/resources/: database.py  http.py
app/surveys/: fvv-ss20-go.json  test-survey.json
app/tests/: conftest.py  test_main.py  test_results.py  test_survey.py  test_validation.py
dev_backend/: backend.py
dev_backend/surveys/: fastsurvey.dev-survey-01.json  fastsurvey.test.json
flask_backend/: __init__.py  database.py  routes.py  support_functions.py
flask_backend/static/: robots.txt
flask_backend/support_functions/: formatting.py  mailing.py  routing.py  timing.py  tokening.py
flask_backend/templates/: survey_1_email.html  survey_2_email.html  survey_3_email.html  survey_4_email.html  survey_5_email.html
scripts/: build  build.sh  deploy  deploy.sh  dev-run  develop  develop.sh  format  generate-signature-keys  jupyter  run  run.sh  test  test.sh
tests/: README.md  conftest.py  data.py  parameters.json  test_aggregation.py  test_auth.py  test_authentication.py  test_cryptography.py  test_email.py  test_mailing.py  test_main.py  test_models.py  test_results.py  test_validation.py
tests/accounts/: fastsurvey.json
tests/admins/: fastsurvey.json
tests/cryptography/: test_access.py  test_password.py
tests/data/: account_datas.json  accounts.json  other.json  variables.json
tests/survey/: aggregation_pipeline.json  changes.md  configurations.json  default_results.json  resultss.json  submissionss.json
tests/surveys/: 1.json  complex-survey.json  email.json  (+3 more)
(+129 files in other folders)
