[tool.poetry]
name = "backend"
version = "0.2.0"
description = ""
authors = ["Felix Böhm <felix@felixboehm.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
motor = "^2.2.0"
dnspython = "^2.0.0"
uvicorn = "^0.11.8"
pymongo = "^3.11.0"
httpx = "^0.14.3"
cachetools = "^4.1.1"
PyJWT = "^1.7.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
cryptography = "^3.2.1"
argon2-cffi = "^20.1.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-asyncio = "~0.12.0"
importlib-metadata = "^3.10.1"
# used by uvicorn's --env-file flag in ./scripts/develop
python-dotenv = "^0.18.0"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
