[tool.poetry]
name = "backend"
version = "0.5.0"
description = "FastSurvey's backend that crunches survey data"
authors = ["Felix Böhm <felix@felixboehm.dev>"]

[tool.poetry.dependencies]
python = "^3.9.7"
fastapi = "^0.70.0"
motor = "^2.5.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pymongo = {extras = ["srv"], version = "^3.12.1"}
httpx = "^0.20.0"
pydantic = "^1.8.2"
passlib = {extras = ["argon2"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.12.1"
pytest-asyncio = "~0.12.0"
jupyterlab = "^3.2.0"
black = "^21.10b0"
isort = "^5.10.1"

[tool.isort]
profile = "black"
lines_after_imports = "2"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
